# docs/swagger.json
@@ -9,27 +9,7 @@
     "host": "localhost:8080",
     "basePath": "/",
     "paths": {
-        "/chart/exampleChart": {
-            "get": {
-                "description": "用户获取自己的图表数据接口",
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "chart"
-                ],
-                "summary": "用户获取自己的图表数据接口",
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/api.ExampleChartResp"
-                        }
-                    }
-                }
-            }
-        },
-        "/chart/findMyChart": {
+        "/chart/auth/findMyChart": {
             "get": {
                 "description": "用户获取自己的图表数据接口",
                 "produces": [
@@ -72,7 +52,7 @@
                 }
             }
         },
-        "/chart/gen": {
+        "/chart/auth/gen": {
             "post": {
                 "description": "AI生成图表数据接口",
                 "consumes": [
@@ -132,7 +112,7 @@
                 }
             }
         },
-        "/chart/myChartDel": {
+        "/chart/auth/myChartDel": {
             "post": {
                 "description": "删除图表数据接口",
                 "produces": [
@@ -166,7 +146,27 @@
                 }
             }
         },
-        "/user/currentUserDetail": {
+        "/chart/exampleChart": {
+            "get": {
+                "description": "用户获取自己的图表数据接口",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "chart"
+                ],
+                "summary": "用户获取自己的图表数据接口",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/api.ExampleChartResp"
+                        }
+                    }
+                }
+            }
+        },
+        "/user/auth/currentUserDetail": {
             "get": {
                 "description": "用户自身详情接口",
                 "produces": [
@@ -189,6 +189,34 @@
                         "description": "OK",
                         "schema": {
                             "$ref": "#/definitions/api.CurrentUserDetailResp"
+                        }
+                    }
+                }
+            }
+        },
+        "/user/auth/loginOut": {
+            "post": {
+                "description": "用户自身详情接口",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "user"
+                ],
+                "summary": "用户退出登陆接口",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "name": "token",
+                        "in": "query",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/api.UserLoginOutResp"
                         }
                     }
                 }
@@ -220,34 +248,6 @@
                         "description": "OK",
                         "schema": {
                             "$ref": "#/definitions/api.UserLoginResp"
-                        }
-                    }
-                }
-            }
-        },
-        "/user/loginOut": {
-            "post": {
-                "description": "用户自身详情接口",
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "user"
-                ],
-                "summary": "用户退出登陆接口",
-                "parameters": [
-                    {
-                        "type": "string",
-                        "name": "token",
-                        "in": "query",
-                        "required": true
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/api.UserLoginOutResp"
                         }
                     }
                 }
